Update integration poms